# tp-final-aprmaq

./: .gitignore  README.md  eda-star_classification.ipynb  pyproject.toml  tp_final.ipynb
