[project]
name = "tp-final-aprmaq"
version = "0.1.0"
description = "TP final aprendizaje de maquinas de la Carrera de Especialización en Inteligencia Artificial (CEIA - FIUBA)."
authors = [{name = "Franco Morero"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests>=2.32.3,<3.0.0",
    "sqlalchemy>=2.0.38,<3.0.0",
    "pandas>=2.1.4,<2.2.0",
    "ydata-profiling>=4.12.2,<5.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "scipy>=1.6.1,<=1.11.4",
    "numpy>1.26.3,<=1.26.4",
    "scikit-learn>=0.24,<1.5.0",
    "ipykernel>=6.29.5,<7.0.0",
    "ipywidgets>=8.1,<9.0",
    "beautifulsoup4>=4.13.3,<5.0.0",
    "jupyter>=1.1.1,<2.0.0",
    "missingno>=0.5.2,<0.6.0",
    "imblearn>=0.0,<0.1",
    "librosa>=0.11.0,<0.12.0",
    "sweetviz>=2.3.1,<3.0.0",
    "category-encoders>=2.6.0,<3.0.0",
    "pycaret>=3.3.2,<4.0.0",
    "tensorflow>=2.19.0,<3.0.0",
    "nltk>=3.9.1,<4.0.0",
    "rasterio>=1.4.3,<2.0.0",
    "ucimlrepo>=0.0.7",
    "tqdm>=4.66,<5.0",
    "pillow>=10.0,<12.0",
    "optuna>=4.8.0",
    "torch>=2.12.0",
    "graphviz>=0.21",
]
